--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,4 @@
+
 .sticky {
   transition: all 0.5s ease-out 0s !important;
   box-shadow: 0px 2px 2px 0px var(--clr-border) !important;
@@ -167,4 +168,27 @@
 }
 .dark-mode #toggle .toggle-inner {
   background-color: #202523;
+}
+
+.logo {
+  display: block;
+  flex: none;
+  float: left;
+  font-size: 1.5em;
+  line-height: normal;
+  margin-top: 10px;
+  text-decoration: none;
+}
+
+.logo-name {
+  font-family: "Agustina Regular";
+  font-weight: bold;
+  font-variant-ligatures: no-common-ligatures;
+  -webkit-font-variant-ligatures: no-common-ligatures;
+  padding: 0 10px;
+  color:var(--clr-primary);
+}
+
+.grey-color {
+  color:var(--clr-primary);
 }
